# livekit-voice-agent-demo

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml  requirements-token-server.txt  token-server.py
backend/src/livekit_agent/: agent.py  agent_config.py
backend/src/rag/: README.md  __init__.py  load_topic_pdf.py  multi_agent_rag_service.py  orchestrator.py  pdf_loader.py  person_agent.py  personalities.py  rag_service.py  retrieval.py  single_faiss_multi_collection.py  test_rag.py  vector_store.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  token-server.ts
